--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
 <body>
 
-    <img src="images/bubu.png" class="absolute-center">
+    <img src="images/bubu.png" class="absolute-center default-image">
+      <img src="https://bubu-dudu-valentine.netlify.app/happy1.gif" class="absolute-center yes-image" style="display: none;">
+    
     <div class="valentine-container">
   <h1 class="valentine-text">Will you be my Valentine? 💕</h1>
 
@@ -27,7 +29,6 @@
     <button class="no">No 🙈</button>
   </div>
 </div>
-
 
     
 </body>
@@ -94,5 +95,35 @@
     noBtn.style.left = `${x}px`;
     noBtn.style.top = `${y}px`;
   });
+
+  const yesBtn = document.querySelector('.yes');
+const defaultimg = document.querySelector('.default-image');
+const yesimg = document.querySelector('.yes-image');
+
+yesBtn.addEventListener('touchstart', () => {
+  // Hide Valentine content
+  for(let i=0; i<30; i++){
+        createHeart();
+      }
+  defaultimg.style.display = 'none';
+
+  // Show GIF
+  yesimg.style.display = 'flex';
+});
+function createHeart() {
+      const heart = document.createElement('div');
+      heart.classList.add('heart');
+      heart.innerText = '💖';
+
+      // Random position & animation duration
+      heart.style.left = Math.random() * 100 + 'vw';
+      heart.style.fontSize = (10 + Math.random() * 30) + 'px';
+      heart.style.animationDuration = (3 + Math.random() * 3) + 's';
+
+      document.body.appendChild(heart);
+
+      // Remove heart after animation
+      heart.addEventListener('animationend', () => heart.remove());
+    }
 </script>
 </html>
